--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
+    "test":"echo/ error: no test specified",
     "start": "node server.js"
   },
   "description": "In this mini-project, you will work with a group to add routes to an existing application. You will create one wildcard route for serving up a 404 page, as well as a diagnostics route for logging failed form validation.",
